paper_experimental_results/2026-05-10T00-24-35/grok-code-fast-1/expressions/struct_and_union_3a/sample_005/target.compile.log
error[E0599]: no method named `try_into` found for slice `[u8]` in the current scope
   --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/expressions/struct_and_union_3a/sample_005/target.rs:34:34
    |
 34 |     i32::from_ne_bytes(buf[0..4].try_into().unwrap())
    |                                  ^^^^^^^^
    |
   ::: /Users/arielkellison/.rustup/toolchains/nightly-2025-09-10-aarch64-apple-darwin/lib/rustlib/src/rust/library/core/src/convert/mod.rs:622:8
    |
622 |     fn try_into(self) -> Result<T, Self::Error>;
    |        -------- the method is available for `[u8]` here
    |
    = help: items from traits can only be used if the trait is in scope
    = note: 'std::convert::TryInto' is included in the prelude starting in Edition 2021
help: trait `TryInto` which provides `try_into` is implemented but not in scope; perhaps you want to import it
    |
  1 + use std::convert::TryInto;
    |
help: there is a method `into` with a similar name
    |
 34 -     i32::from_ne_bytes(buf[0..4].try_into().unwrap())
 34 +     i32::from_ne_bytes(buf[0..4].into().unwrap())
    |

error[E0599]: no method named `try_into` found for slice `[u8]` in the current scope
   --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/expressions/struct_and_union_3a/sample_005/target.rs:46:35
    |
 46 |     f64::from_ne_bytes(buf[4..12].try_into().unwrap())
    |                                   ^^^^^^^^
    |
   ::: /Users/arielkellison/.rustup/toolchains/nightly-2025-09-10-aarch64-apple-darwin/lib/rustlib/src/rust/library/core/src/convert/mod.rs:622:8
    |
622 |     fn try_into(self) -> Result<T, Self::Error>;
    |        -------- the method is available for `[u8]` here
    |
    = help: items from traits can only be used if the trait is in scope
    = note: 'std::convert::TryInto' is included in the prelude starting in Edition 2021
help: trait `TryInto` which provides `try_into` is implemented but not in scope; perhaps you want to import it
    |
  1 + use std::convert::TryInto;
    |
help: there is a method `into` with a similar name
    |
 46 -     f64::from_ne_bytes(buf[4..12].try_into().unwrap())
 46 +     f64::from_ne_bytes(buf[4..12].into().unwrap())
    |

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0599`.